@@ -1,3 +1,6 @@
+2004-03-12  Tom Copeland <tom@infoether.com>
+	* www/snippet/browse.php & detail.php: Replace user_name with realname.
+
 2004-03-11  Tom Copeland <tom@infoether.com>
 	* SQL optimization: Replaced a 'select *' with a 'select count(*)'
 	in Forum.class.  Modified query in project_summary.php to limit columns
